src/test/ui/kindck/kindck-impl-type-params.stderr
error[E0277]: `T` cannot be sent between threads safely
  --> $DIR/kindck-impl-type-params.rs:18:13
   |
LL |     let a = &t as &dyn Gettable<T>;
   |             ^^ `T` cannot be sent between threads safely
   |
   = note: required because of the requirements on the impl of `Gettable<T>` for `S<T>`
   = note: required for the cast to the object type `dyn Gettable<T>`
   = note: required because of the requirements on the impl of `CoerceUnsized<&dyn Gettable<T>>` for `&S<T>`
   = note: required by cast to type `&dyn Gettable<T>`
note: &S<T> as &dyn Gettable<T>
  --> $DIR/kindck-impl-type-params.rs:18:13
   |
LL |     let a = &t as &dyn Gettable<T>;
   |             ^^
help: consider restricting type parameter `T`
   |
LL | fn f<T: Send>(val: T) {
   |       ^^^^^^

error[E0277]: the trait bound `T: Copy` is not satisfied
  --> $DIR/kindck-impl-type-params.rs:18:13
   |
LL |     let a = &t as &dyn Gettable<T>;
   |             ^^ the trait `Copy` is not implemented for `T`
   |
   = note: required because of the requirements on the impl of `Gettable<T>` for `S<T>`
   = note: required for the cast to the object type `dyn Gettable<T>`
   = note: required because of the requirements on the impl of `CoerceUnsized<&dyn Gettable<T>>` for `&S<T>`
   = note: required by cast to type `&dyn Gettable<T>`
note: &S<T> as &dyn Gettable<T>
  --> $DIR/kindck-impl-type-params.rs:18:13
   |
LL |     let a = &t as &dyn Gettable<T>;
   |             ^^
help: consider restricting type parameter `T`
   |
LL | fn f<T: Copy>(val: T) {
   |       ^^^^^^

error[E0277]: `T` cannot be sent between threads safely
  --> $DIR/kindck-impl-type-params.rs:25:31
   |
LL |     let a: &dyn Gettable<T> = &t;
   |                               ^^ `T` cannot be sent between threads safely
   |
   = note: required because of the requirements on the impl of `Gettable<T>` for `S<T>`
   = note: required for the cast to the object type `dyn Gettable<T>`
   = note: required because of the requirements on the impl of `CoerceUnsized<&dyn Gettable<T>>` for `&S<T>`
   = note: required by cast to type `&dyn Gettable<T>`
note: &S<T> as &dyn Gettable<T>
  --> $DIR/kindck-impl-type-params.rs:25:31
   |
LL |     let a: &dyn Gettable<T> = &t;
   |                               ^^
help: consider restricting type parameter `T`
   |
LL | fn g<T: Send>(val: T) {
   |       ^^^^^^

error[E0277]: the trait bound `T: Copy` is not satisfied
  --> $DIR/kindck-impl-type-params.rs:25:31
   |
LL |     let a: &dyn Gettable<T> = &t;
   |                               ^^ the trait `Copy` is not implemented for `T`
   |
   = note: required because of the requirements on the impl of `Gettable<T>` for `S<T>`
   = note: required for the cast to the object type `dyn Gettable<T>`
   = note: required because of the requirements on the impl of `CoerceUnsized<&dyn Gettable<T>>` for `&S<T>`
   = note: required by cast to type `&dyn Gettable<T>`
note: &S<T> as &dyn Gettable<T>
  --> $DIR/kindck-impl-type-params.rs:25:31
   |
LL |     let a: &dyn Gettable<T> = &t;
   |                               ^^
help: consider restricting type parameter `T`
   |
LL | fn g<T: Copy>(val: T) {
   |       ^^^^^^

error[E0477]: the type `&'a isize` does not fulfill the required lifetime
  --> $DIR/kindck-impl-type-params.rs:32:13
   |
LL |     let a = &t as &dyn Gettable<&'a isize>;
   |             ^^
   |
   = note: type must satisfy the static lifetime

error[E0277]: the trait bound `String: Copy` is not satisfied
  --> $DIR/kindck-impl-type-params.rs:38:13
   |
LL |     let a = t as Box<dyn Gettable<String>>;
   |             ^ the trait `Copy` is not implemented for `String`
   |
   = note: required because of the requirements on the impl of `Gettable<String>` for `S<String>`
   = note: required for the cast to the object type `dyn Gettable<String>`
   = note: required because of the requirements on the impl of `CoerceUnsized<Box<dyn Gettable<String>>>` for `Box<S<String>>`
   = note: required by cast to type `Box<dyn Gettable<String>>`
note: std::boxed::Box<S<std::string::String>> as std::boxed::Box<dyn Gettable<std::string::String>>
  --> $DIR/kindck-impl-type-params.rs:38:13
   |
LL |     let a = t as Box<dyn Gettable<String>>;
   |             ^

error[E0277]: the trait bound `Foo: Copy` is not satisfied
  --> $DIR/kindck-impl-type-params.rs:46:37
   |
LL |     let a: Box<dyn Gettable<Foo>> = t;
   |                                     ^ the trait `Copy` is not implemented for `Foo`
   |
   = note: required because of the requirements on the impl of `Gettable<Foo>` for `S<Foo>`
   = note: required for the cast to the object type `dyn Gettable<Foo>`
   = note: required because of the requirements on the impl of `CoerceUnsized<Box<dyn Gettable<Foo>>>` for `Box<S<Foo>>`
   = note: required by cast to type `Box<dyn Gettable<Foo>>`
note: std::boxed::Box<S<foo3::Foo>> as std::boxed::Box<dyn Gettable<foo3::Foo>>
  --> $DIR/kindck-impl-type-params.rs:46:37
   |
LL |     let a: Box<dyn Gettable<Foo>> = t;
   |                                     ^

error: aborting due to 7 previous errors

Some errors have detailed explanations: E0277, E0477.
For more information about an error, try `rustc --explain E0277`.
